# hippoID

./: .env.sample  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup-checks.sh
chroma/: chroma.sqlite3
src/hippo/engine/: hippo.py
src/hippo/utils/: helpers.py  settings.py
src/hippoID/engine/: constants.py  facial_recognition.py  hippo.py  interaction.py
src/hippoID/identification/: utils.py
src/hippoID/io/: constants.py  utils.py
src/hippoID/memory/: constants.py  database.py
src/hippoID/models/language/: constants.py  llms.py  prompts.py  schemas.py
src/hippoID/models/speech/: constants.py  stt.py  tts.py
src/hippoID/utils/: computations.py  processing.py
src/hippo_id/: __init__.py
src/hippo_id/engine/: constants.py
src/hippo_id/identification/: constants.py  utils.py
src/hippo_id/io/: constants.py  decorators.py  utils.py
src/hippo_id/memory/: constants.py  database.py  states.py
src/hippo_id/models/language/: constants.py  llms.py
src/hippo_id/models/speech/: constants.py  stt.py
src/hippo_id/models/vision/: face.py
src/hippo_id/utils/: calculations.py  utils.py
